fix: visual distortions

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -458,7 +458,8 @@ aside {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  display: none;
+  margin: 40px 0 30px 0;
+  // display: none;
   @media screen and (max-width: 768px) {
     flex-direction: column;
     align-items: center;
@@ -493,7 +494,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1em;
+  padding: 2em 1em;
   text-align: center;
   font-family: Syne, sans-serif;
 }
